<resources>
    <string name="app_name">InventoryApp_S2</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_name">Product Name</string>

    <!-- Label for product price in the editor [CHAR LIMIT=30] -->
    <string name="product_price">Unit Price ($)</string>

    <!-- Label for product quantity in the editor [CHAR LIMIT=30] -->
    <string name="product_quantity">Quantity</string>

    <!-- Label for product quantity in the editor [CHAR LIMIT=30] -->
    <string name="product_supplier">Supplier Name</string>

    <!-- Label for product quantity in the editor [CHAR LIMIT=30] -->
    <string name="product_supplier_phone">Supplier Phone</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for quqntity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <string name="hint_product_supplier">Supplier Name</string>

    <string name="hint_product_supplier_phone">Phone Number</string>

    <string name="title_activity_editor">EditorActivity</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The shelves are empty...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Button to phone the supplier in the editor-->
    <string name="call_supplier_button">Call Supplier</string>

    <!-- Label for Order More category in the editor -->
    <string name="category_order_more">Order More</string>

    <!-- Label for Modify Quantity category in the editor -->
    <string name="category_modify_quantity">Modify Quantity</string>

    <!-- Toast message to inform that the book is no longer in stock -->
    <string name="sale_button_failed">Product is no longer available</string>


</resources>
